[package]
name = "simple-ssh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rustls = "0.21"
rcgen = "0.10"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.21"
